--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/prettier": "^2.1.5",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/stylelint": "^9.10.1",
